# Chip8-Emulator

./: CMakeLists.txt  Makefile  README.md  chip8  rom
.github/workflows/: c-cpp.yml
src/: CPU.cpp  CPU.h  RAM.cpp  RAM.h  TimedRegister.h  TimedRegisters.cpp  fileLoader.cpp  fileLoader.h  main.cpp  screen.cpp  screen.h
